<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddPlaceFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/placeaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/address"
            android:background="@drawable/layoutback"
            android:padding="15dp"
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/placerooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutback"
            android:padding="15dp"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:hint="@string/rooms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeaddress" />

        <EditText
            android:id="@+id/placebathrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutback"
            android:padding="15dp"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:hint="@string/bathroom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placerooms" />

        <EditText
            android:id="@+id/placegarage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutback"
            android:padding="15dp"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:hint="@string/garage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placebathrooms" />

        <EditText
            android:id="@+id/placesurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutback"
            android:padding="15dp"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:hint="@string/surface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placegarage" />



        <EditText
            android:id="@+id/placeprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutback"
            android:padding="15dp"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"
            android:hint="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placesurface" />



        <EditText
            android:id="@+id/placedescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/layoutback"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:lines="6"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeprice" />
        <EditText
            android:id="@+id/placetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutback"
            android:padding="15dp"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPersonName"
            android:hint="@string/titleofplace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placedescription" />

        <ImageView
            android:id="@+id/placeimage"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:src="@drawable/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placetitle" />

        <Button
            android:id="@+id/buttonaddplace"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Add place"
            android:backgroundTint="#007AFF"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeimage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>