<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#2ECC40"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_color" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:background="@drawable/layoutback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/E_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="Username"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:background="@drawable/edittxtback"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:background="@drawable/edittxtback"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:background="@drawable/custombtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/don_t_have_account_yet"
        android:textSize="17dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="20dp"
        android:background="@drawable/custombtn"

        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>